[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "cryo-tool"
version = "0.1.0"
description = "A CLI tool to freeze/unfreeze process trees in Linux ❄️"
readme = "README.md"
requires-python = ">=3.8"
authors = [
  { name = "AnnPoshtak", email = "annposhtak@gmail.com" },
]
license = { text = "MIT" }

dependencies = [
  "psutil",
]

[project.urls]
"Homepage" = "https://github.com/AnnPoshtak/Cryo"

[project.scripts]
cryo = "cryo:main"

[tool.setuptools]
py-modules = ["cryo"]